# fluttrfly

./: .gitignore  CHNAGELOG.md  README.md  coverage.xml  developers.md  makefile  next.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
fluttrfly/assets/: config.json
tests/: test_build_command.py  test_build_functions.py  test_commands_manager.py  test_common_functions.py  test_env_command.py  test_env_functions.py  test_json_functions.py  test_setup_command.py  test_setup_functions.py
